reverted fixes for z-index

--- a/internal/Picker/Picker.module.less
+++ b/internal/Picker/Picker.module.less
@@ -19,6 +19,7 @@
 		display: none;
 		position: absolute;
 		width: calc(100% - 90px);
+		z-index: 1;
 	}
 
 	.applySkins({
@@ -90,6 +91,7 @@
 			color: @agate-picker-item-color;
 			height: @agate-picker-item-height;
 			line-height: @agate-picker-item-height;
+			z-index: 2;
 		}
 
 		.active {
@@ -98,6 +100,10 @@
 			font-weight: @agate-picker-active-font-weight;
 			height: @agate-picker-active-height;
 			line-height: @agate-picker-active-height;
+
+			.item {
+				z-index: 2;
+			}
 
 			&::before {
 				content: "";
@@ -108,7 +114,6 @@
 				width: calc(100% - 2* @agate-picker-padding);
 				left: 50%;
 				transform: translateX(-50%);
-				z-index: -1;
 			}
 		}
 
